--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 # vscode
 .vscode/
 
+# certificate authorization
+./ca
+*.pem
+*.crt
+*.key
+
 ## FROM ==> https://github.com/github/gitignore
 # python venv
 
