--- a/mongodb/mongod.conf
+++ b/mongodb/mongod.conf
@@ -8,9 +8,13 @@ net:
     port: 27017
     bindIpAll: true
     tls:
-        mode: preferTLS
-        certificateKeyFile: /etc/ssl/keys/key.pem
-        CAFile: /etc/certs/ca-certificate.pem
+        mode: requireTLS
+        disabledProtocols: TLS1_0,TLS1_1
+        certificateKeyFile: /etc/ssl/keys/database.servicetws.com.pem
+        certificateKeyFilePassword: /etc/ssl/keys/ssl_passphrase.txt
+        CAFile: /etc/ssl/certs/ca-certificate.pem
+        # dev only
+        allowInvalidHostnames: true
 
 processManagement:
     timeZoneInfo: /usr/share/zoneinfo
