--- a/mongodb/mongo/mongod.conf
+++ b/mongodb/mongo/mongod.conf
@@ -4,21 +4,24 @@ storage:
     journal:
         enabled: true
 
+systemLog:
+    destination: file
+    path: "/var/log/mongodb/mongod.log"
+    logAppend: true
+
 net:
     port: 27017
     bindIpAll: true
     tls:
-        mode: requireTLS
+        mode: preferTLS
         disabledProtocols: TLS1_0,TLS1_1
         certificateKeyFile: /etc/ssl/keys/database.servicetws.com.pem
         certificateKeyFilePassword: /etc/ssl/keys/ssl_passphrase.txt
-        CAFile: /etc/ssl/certs/ca-certificate.pem
+        CAFile: /etc/ssl/certs/ca-certificate.crt
         # dev only
         allowInvalidHostnames: true
-
-processManagement:
-    timeZoneInfo: /usr/share/zoneinfo
+        allowInvalidCertificates: true
 
 security:
-    authorization: enabled
+    # authorization: enabled
     clusterAuthMode: x509
