--- a/mongodb/mongo/mongod.conf
+++ b/mongodb/mongo/mongod.conf
@@ -8,6 +8,7 @@ systemLog:
     destination: file
     path: "/var/log/mongodb/mongod.log"
     logAppend: true
+    logRotate: reopen
 
 net:
     port: 27017
