--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,19 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "chai-as-promised": "^7.1.1",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^9.0.2",
         "express": "^4.17.1",
         "http-status-codes": "^2.1.4",
+        "jsonwebtoken": "^8.5.1",
         "log4js": "^6.3.0",
-        "mongoose": "^5.12.10"
+        "mongoose": "^5.12.10",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "chai": "^4.3.4",
+        "chai-uuid": "^1.0.6",
         "mocha": "^8.4.0",
         "node-mocks-http": "^1.10.1",
         "nodemon": "^2.0.7",
