--- a/session/config/redis.conf
+++ b/session/config/redis.conf
@@ -95,6 +95,7 @@ tls-port 6379
 tls-cert-file /usr/local/etc/ssl/session.servicetws.com.crt
 tls-key-file /usr/local/etc/ssl/session.servicetws.com.key
 tls-ca-cert-file /usr/local/etc/ssl/ca-certificate.crt
+tls-auth-clients no
 
 # TCP listen() backlog.
 #
