reverse proxy and frontend dockerization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,36 @@ services:
                 node_env: development
         depends_on:
             - mongodb
+    frontend:
+        hostname: frontend.servicetws.com
+        networks:
+            - ring
+        build:
+            context: ./frontend
+        volumes:
+            - ./frontend/conf/nginx.conf:/etc/nginx/nginx.conf
+            - ./frontend/ssl:/etc/ssl/certs
+            - ./frontend/includes/mime.types /etc/nginx/includes/mime.types
+            - ./frontend/includes/proxy.conf /etc/nginx/includes/proxy.conf
+        depends_on:
+            - backend
+
+    reverse:
+        hostname: reverse.servicetws.com
+        networks:
+            - ring
+        ports:
+            - 80:80
+            - 443:443
+        image: nginx:latest
+        volumes:
+            - ./reverse/conf/nginx.conf:/etc/nginx/nginx.conf
+            - ./reverse/ssl:/etc/ssl/certs
+            - ./reverse/includes/mime.types /etc/nginx/includes/mime.types
+            - ./reverse/includes/proxy.conf /etc/nginx/includes/proxy.conf
+        depends_on:
+            - backend
+            - frontend
 
 networks:
     ring:
