--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -25,9 +25,9 @@ http {
         }
 
         #SSL/TLS config
-        ssl_certificate             /etc/ssl/certs/frontend.servicetws.com.crt;
-        ssl_certificate_key         /etc/ssl/certs/frontend.servicetws.com.key;
-        ssl_password_file           /etc/ssl/certs/ssl_passwords.txt;
+        ssl_certificate             /etc/ssl/certs/nginx/frontend.servicetws.com.crt;
+        ssl_certificate_key         /etc/ssl/certs/nginx/frontend.servicetws.com.key;
+        ssl_password_file           /var/lib/nginx/ssl_passphrase.txt;
         ssl_session_tickets         off;
         ssl_protocols               TLSv1.2 TLSv1.3;
         ssl_ciphers                 HIGH:!aNULL:!MD5;
