--- a/reverse/Dockerfile
+++ b/reverse/Dockerfile
@@ -1,10 +1,10 @@
 FROM nginx:latest
 
-COPY ./conf/includes/mime.types /etc/nginx/includes/mime.types
-COPY ./conf/includes/proxy.conf /etc/nginx/includes/proxy.conf
+COPY ./includes/mime.types /etc/nginx/includes/mime.types
+COPY ./includes/proxy.conf /etc/nginx/includes/proxy.conf
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-COPY ./conf/ssl/pinqubator.com.crt /etc/ssl/certs/nginx/
-COPY ./conf/ssl/pinqubator.com.key /etc/ssl/certs/nginx/
-COPY ./conf/ssl/pinqubator-ca.pem /etc/ssl/certs/nginx/
-COPY ./conf/ssl/ssl_passwords.txt /var/lib/nginx/
+COPY ./ssl/reverse.servicetws.com.crt /etc/ssl/certs/nginx/
+COPY ./ssl/reverse.servicetws.com.key /etc/ssl/certs/nginx/
+COPY ./ssl/ca-certificate.crt /etc/ssl/certs/nginx/
+COPY ./ssl/ssl_passphrase.txt /var/lib/nginx/
 
