--- a/reverse/conf/nginx.conf
+++ b/reverse/conf/nginx.conf
@@ -12,17 +12,17 @@ http {
     server {
         listen                  80;
         server_name             pinqubator.com;
-        return                  301 https://www.servicetws.com$request_uri;
+        return                  301 https://servicetws.com$request_uri;
     }
 
     server {
         listen                  443 ssl;
-        server_name             servicetws.com www.servicetws.com;
+        server_name             servicetws.com;
 
         #SSL/TLS config
-        ssl_certificate             /etc/ssl/certs/reverse.servicetws.com.crt;
-        ssl_certificate_key         /etc/ssl/certs/reverse.servicetws.com.key;
-        ssl_password_file           /etc/ssl/certs/ssl_passwords.txt;
+        ssl_certificate             /etc/ssl/certs/nginx/reverse.servicetws.com.crt;
+        ssl_certificate_key         /etc/ssl/certs/nginx/reverse.servicetws.com.key;
+        ssl_password_file           /var/lib/nginx/ssl_passphrase.txt;
         ssl_session_tickets         off;
         ssl_protocols               TLSv1.2 TLSv1.3;
         ssl_ciphers                 HIGH:!aNULL:!MD5;
@@ -33,12 +33,12 @@ http {
             include                         /etc/nginx/includes/proxy.conf;
             proxy_pass                      https://frontend.servicetws.com;
             proxy_redirect                  off;
-            proxy_ssl_certificate           /etc/ssl/certs/reverse.servicetws.com.crt;
-            proxy_ssl_certificate_key       /etc/ssl/certs/reverse.servicetws.com.key;
-            proxy_ssl_password_file         /etc/ssl/certs/ssl_passwords.txt;
+            proxy_ssl_certificate           /etc/ssl/certs/nginx/reverse.servicetws.com.crt;
+            proxy_ssl_certificate_key       /etc/ssl/certs/nginx/reverse.servicetws.com.key;
+            proxy_ssl_password_file         /var/lib/nginx/ssl_passphrase.txt;
             proxy_ssl_protocols             TLSv1.2 TLSv1.3;
             proxy_ssl_ciphers               HIGH:!aNULL:!MD5;
-            proxy_ssl_trusted_certificate   /etc/ssl/certs/nginx/ca-certificate.pem;
+            proxy_ssl_trusted_certificate   /etc/ssl/certs/nginx/ca-certificate.crt;
 
             proxy_ssl_verify                on;
             proxy_ssl_verify_depth          2;
@@ -50,12 +50,12 @@ http {
             include                         /etc/nginx/includes/proxy.conf;
             proxy_pass                      https://backend.servicetws.com:8443;
             proxy_redirect                  off;
-            proxy_ssl_certificate           /etc/ssl/certs/reverse.servicetws.com.crt;
-            proxy_ssl_certificate_key       /etc/ssl/certs/reverse.servicetws.com.key;
-            proxy_ssl_password_file         /etc/ssl/certs/ssl_passwords.txt;
+            proxy_ssl_certificate           /etc/ssl/certs/nginx/reverse.servicetws.com.crt;
+            proxy_ssl_certificate_key       /etc/ssl/certs/nginx/reverse.servicetws.com.key;
+            proxy_ssl_password_file         /var/lib/nginx/ssl_passphrase.txt;
             proxy_ssl_protocols             TLSv1.2 TLSv1.3;
             proxy_ssl_ciphers               HIGH:!aNULL:!MD5;
-            proxy_ssl_trusted_certificate   /etc/ssl/certs/nginx/ca-certificate.pem;
+            proxy_ssl_trusted_certificate   /etc/ssl/certs/nginx/ca-certificate.crt;
 
             proxy_ssl_verify                on;
             proxy_ssl_verify_depth          2;
