development stands for docker-compose local, local stands for local dev, fixed httponly cookie refresh policy, frontend test buttons to check login routine

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14
 
 WORKDIR /usr/src/app
 COPY ./package*.json ./
-RUN npm i
+RUN ["yarn", "install", "--prod"]
 
 ARG node_env
 ENV NODE_ENV=${node_env}
